src/web/game.css
/*
* GAME BOARD CONTAINER
*/

#board {
    max-width: 1150px;
    width: 100%;
    display: grid;
    grid-template-columns: 13vw 13vw 13vw 13vw 13vw;
    grid-template-rows: 14vh 14vh 14vh 14vh 14vh;
    column-gap: 2vw;
    row-gap: 2vh;
    transition: transform 250ms ease-in-out;
}

/*
* CARDS
*/

/* all cards */
.card {
    width: 13vw;
    height: 13vh;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 10px;
    transition: transform 0.5s ease-in-out;
}

.card p {
    font-weight: bold;
    font-size: 2vw;
    text-transform: uppercase;
}

.card:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
    cursor: pointer;
}

/* coloured cards */
.neutral {
    background-color: tan;
    border: sienna dashed 3px;
    border-radius: 10px;
}

.blueTeam {
    background-color: #3399ff;
    border: darkblue dashed 3px;
    border-radius: 10px;
}

.redTeam {
    background-color: #ff5050;
    border: darkred dashed 3px;
    border-radius: 10px;
}

.bombCard {
    background-color: #5e5e5e;
    border: #1f1f1f dashed 3px;
    border-radius: 10px;
}

/*
* CLUE BOX
*/

/* "enter clue" box */
.clueBox {
    margin: 1em auto;
}

.clueBox input {
    width: 9em;
}

.clueBox input,
.clueBox select,
.clueBox button {
    font-size: 1em;
    padding: 0.5em;
    border-radius: 0.4em;
    border: none;
    background: white;
    text-align: center;
}

.clueBox button:hover {
    background-color: lightGreen;
}

/* drop down menu */
#maxClues {
    padding: 10px 20px;
    cursor: pointer;
    border-radius: 7px;
}

/*
* SIDE PANEL
*/

.sidebarContainer{
    position: absolute;
    z-index: 1;
    top: 0;
    right: 0;
    height: 100vh;
    width: 25%;
    transition: all 250ms ease-in-out;
}

#openSidebarMenu {
    position: relative;
    float: left;
    width: 20%;
    height: 10%;
    top: 0%;
    /* div centering is one of the greatest achievements
    of computer science */
}

#openSidebarMenu input {
    cursor: pointer;
    position: relative;
    opacity: 0;
    width: 100%;
    height: 100%;
}

#sidebarMenu {
    position: fixed;
    background: #d2ecf8;
    border-radius: 15px;
    display: inline-block;
    height: 100vh;
}

.arrow {
    cursor: pointer;
    position: absolute;
    z-index: 2;
    border-right: 5px solid black;
    border-bottom: 5px solid black;
    width: 20px;
    height: 20px;
    top: 40px;
    left: 10px;
    transform: rotate(-45deg);
    transition: all 0.3s ease-in-out;
}

.notificationIcon {
    position: absolute;
    top: -3px;
    right: 18px;
    padding: 5px 10px;
    border-radius: 50%;
    background-color: rgb(255, 140, 140);
    color: white;
    display: block;
    transform: rotate(-135deg);
    transition: all 0.3s ease-in-out;
    display: none;
}

.chatbox {
    margin: 1rem auto;
    width: 80%;
    height: 75vh;
    background-color: white;
    border-radius: 10px;
    max-width: 100%;
}

#chatboxSend {
    margin-top: 2em;
    text-align: center;
}

#chatText, #chatSubmit {
    border-radius: 0.5em;
    border: none;
    padding: 0.5vw;
}

#chatSubmit:hover {
    background-color: lightGreen;
}

#chatboxReceive{
    padding: 0 10px;
    height: 100%;
    overflow-y: scroll;
    word-wrap: break-word
}

#chatboxReceive::-webkit-scrollbar {
    width: 0.5em;
}

#chatboxReceive::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: rgba(0, 0, 0, 0.3);
}

/*
* ROLE SELECT BUTTONS
*/

.teamButton {
    font-size: 1.5vw;
    position: relative;
    height: 15vh;
    width: 20vw;
    margin: 2vh 2vw;
    padding: 5px 5px;

    border: 2px black solid;
    border-radius: 1em;

    background: none;
    transition: 0.08s ease-in;
}

.teamButton:before {
    content: "";
    position: absolute;
    border-radius: 0.8em;
    bottom: 0;
    left: 0;
    right: 0;
    top: 100%;
    z-index: -1;
    transition: top 0.09s ease-in;
}

.blueBt:before {
    background: #3399ff;
}

.redBt:before {
    background: #ff5050;
}

.startBt:before {
    background: #5e5e5e;
}

.blueBt:hover:before,
.redBt:hover:before,
.startBt:hover:before {
    top: 0;
}

.redBt:hover,
.startBt:hover,
.blueBt:hover {
    color: white;
}

.teamForm {
    position:absolute;
    width: 50vw;
    height: 50vh;
    top: 30%;
    left: 25%;
    z-index: 1;    
}

/*
* SETTINGS
*/

/* settings button */
.set {
    width: 60px;
    position: absolute;
    top: 20px;
    transform: translate(0, -50%);
    cursor: pointer;
}

/* container for settings window */
.setBox {
    position: fixed;
    left: 0;
    top: 0;
    z-index: 100;
    width: 100vw;
    height: 100vh;
    background: #ffdede;
    display: none;
}

.setSubTit {
    text-align: center;
    font-size: 20px;
    font-weight: bold;
}

/* individual settings */
.setItem {
    display: flex;
    align-items: center;
    text-align: center;
    justify-content: center;
    margin-top: 30px;
}

.setItemIcon {
    width: 25px;
}

.setItemDesc {
    margin: 0 5px;
    width: 100px;
    text-align: left;
}

.setItemRange {
    width: 200px;
}

.setItemRangeVal{
    width: 50px;
}

input[type=range] {
    -webkit-appearance: none;
    background: black;
    height: 3px;
}

input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    height: 15px;
    width: 15px;
    background: #fff;
    border-radius: 50%;
    border: solid 1px #ddd;
}

/* back button */
.back {
    position: absolute;
    width: 30px;
    top: 10px;
    left: 10px;
    cursor: pointer;
}

/* honestly the mobile part needs a big rework :/ */
/*For mobile*/
@media only screen and (max-width: 600px) {

    body {
        background-color: lightblue;
    }

    #board {
        max-width: 600px;
        width: 100%;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        grid-template-rows: auto;
        column-gap: 1vh;
        row-gap: 1px;
        grid-auto-columns: auto;
        grid-auto-rows: auto;
        transition: transform 250ms ease-in-out;
        justify-content: center
    }

    .card:nth-last-child(1){
        grid-column:2 ;
    }

    .card {
        width: 100px;
        height: 60px;
        display: flex;
        justify-content: center;
        align-items: center;
        margin: 5px;
        transition: transform 0.5s ease-in-out;
    }

    .card p {
        font-size: 15px;
        text-transform: uppercase;
    }

    .clueBox {
        width: 400px;
        align-self: center;
    }
    
    .clueBox input {
        width: 150px;
        margin: 5px 10px 5px 0;
        padding: 10px;

        border-radius: 7px;
        text-align: center;
    }
    
    .clueBox button {
        padding: 10px 20px;
        cursor: pointer;
    }

        .clueBox button:hover {
        background-color: lightGreen;
    }
    
    #maxClues {
        padding: 10px 20px;
        cursor: pointer;
        border-radius: 7px;
    }

    .set {
        width: 60px;
        position: absolute;
        top: 20px;
        transform: translate(0, -50%);
        cursor: pointer;
    }
    
    .setBox {
        position: fixed;
        left: 0;
        top: 0;
        z-index: 100;
        width: 100vw;
        height: 100vh;
        background: #ffdede;
        display: none;
    }
    
    .setTit {
        text-align: center;
        font-size: 40px;
        font-weight: bold;
        padding: 50px 0;
        padding-bottom: 20px;
    }
    
    .setSubTit {
        text-align: center;
        font-size: 20px;
        font-weight: bold;
    }

    .sidebarContainer{
        width: 100%;
    }

    #openSidebarMenu{
        width: 15%;
    }

    #sidebarMenu{
        width: 60%;
    }
}

